modules/vpc/main.tf
resource "aws_vpc" "tehilla" {
  cidr_block = var.cidr_block

  tags = {
    Name = var.name
  }
}

resource "aws_internet_gateway" "tehilla" {
  vpc_id = aws_vpc.tehilla.id

  tags = {
    Name = "${var.name}-igw"
  }
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.tehilla.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.name}-public-subnet"
  }
}



resource "aws_route_table" "public" {
  vpc_id = aws_vpc.tehilla.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.tehilla.id
  }

  tags = {
    Name = "${var.name}-rt"
  }
}


resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
